[project]
name = "stockscreener"
version = "0.0.1"
description = "Stock Screener tutorial"
authors = [
    {name = "leonistor", email = "leo.nistor@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/leonistor/stockscreener"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
