[project]
name = "stockscreener"
version = "0.0.1"
description = "Stock Screener tutorial"
authors = [
    {name = "leonistor", email = "leo.nistor@gmail.com"},
]
dependencies = [
    "fastapi~=0.70",
    "uvicorn~=0.15",
]
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/leonistor/stockscreener"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
